# WooCommerceConnector

./: requirements.txt  setup.cfg
woocommerceconnector/: sync_orders.py  sync_products.py  woocommerce_requests.py
woocommerceconnector/overrides/whitelisted/: payment_entry.py
woocommerceconnector/woocommerceconnector/doctype/woocommerce_config/: woocommerce_config.json
