[metadata]
name = woocommerceconnector
version = attr: woocommerceconnector.__version__
description = WooCommerce Connector for ERPNext
author = libracore
author_email = info@libracore.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    -r requirements.txt

[options.package_data]
* = *.json, *.md
